force-app/main/default/objects/Exercise_Log_Item__c/Exercise_Log_Item__c.object-meta.xml
<CustomObject>
    <label>Exercise Log Item</label>
    <nameField>
        <displayFormat>ELI-{00000000}</displayFormat>
        <label>Exercise Log Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercise Log Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>