force-app/main/default/objects/Exercise_Log_Item__c/fields/Calories_Burned__c.field-meta.xml
<CustomField>
    <fullName>Calories_Burned__c</fullName>
    <label>Calories Burned</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>