force-app/main/default/objects/Exercise_Log_Item__c/fields/Exercise__c.field-meta.xml
<CustomField>
    <fullName>Exercise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exercise</label>
    <referenceTo>Exercise__c</referenceTo>
    <relationshipLabel>Exercise Log Items</relationshipLabel>
    <relationshipName>Exercise_Log_Items</relationshipName>
    <type>Lookup</type>
</CustomField>