force-app/main/default/objects/Exercise_Log_Item__c/fields/Exercise_Log__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Log__c</fullName>
    <label>Exercise Log</label>
    <referenceTo>Exercise_Log__c</referenceTo>
    <relationshipLabel>Exercise Log Items</relationshipLabel>
    <relationshipName>Exercise_Log_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>